--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,35 @@
+[tool.poetry]
+name = "flaskstarter"
+version = "0.2.2"
+description = "A Flask project start-up CLI to create a modular ready projects."
+authors = ["Felipe Bastos Nunes <felipe.bastosn@gmail.com>"]
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/felipebastos/flaskstart"
+keywords = ['flask', 'cli', 'project']
+classifiers = [
+    'Development Status :: 3 - Alpha',      #"3 - Alpha", "4 - Beta" or "5 - Production/Stable"
+    'Intended Audience :: Developers',
+    'Topic :: Software Development :: Build Tools',
+  ]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+click = "8.0.1"
+Jinja2 = "3.0.1"
+MarkupSafe = "2.0.1"
+
+[tool.poetry.dev-dependencies]
+click = "8.0.1"
+Jinja2 = "3.0.1"
+MarkupSafe = "2.0.1"
+pytest = "6.2.4"
+autopep8 = "1.5.7"
+pylint = "2.8.3"
+
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+flaskstarter = 'flaskstarter.flaskstart_cli:flaskstarter'
