--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "flaskstarter"
 version = "0.4"
-description = "A Flask project start-up CLI to create a modular ready projects."
+description = "A Flask project start-up CLI to create Flask modular ready projects."
 authors = ["Felipe Bastos Nunes <felipe.bastosn@gmail.com>"]
 license = "Apache-2.0"
 readme = "README.md"
@@ -16,20 +16,20 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-click = "8.0.1"
-Jinja2 = "3.0.1"
-MarkupSafe = "2.0.1"
+click = "^8.0.1"
+Jinja2 = "^3.0.1"
+MarkupSafe = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
-click = "8.0.1"
-Jinja2 = "3.0.1"
-MarkupSafe = "2.0.1"
+click = "^8.0.1"
+Jinja2 = "^3.0.1"
+MarkupSafe = "^2.0.1"
 pytest = "6.2.4"
 autopep8 = "1.5.7"
 pylint = "2.8.3"
-Flask = "^2.0.1"
-Flask-Migrate = "^3.1.0"
-dynaconf = "^3.1.7"
+Flask = "2.0.2"
+Flask-Migrate = "3.1.0"
+dynaconf = "3.1.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
