--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,11 @@ click = "^8.0.1"
 Jinja2 = "^3.0.1"
 MarkupSafe = "^2.0.1"
 pytest = "6.2.4"
-autopep8 = "1.5.7"
 pylint = "2.8.3"
 Flask = "2.0.2"
 Flask-Migrate = "3.1.0"
 dynaconf = "3.1.7"
+black = "^21.10b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
