--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flaskstarter"
-version = "0.5"
+version = "0.5.1"
 description = "A Flask project start-up CLI to create Flask modular ready projects."
 authors = ["Felipe Bastos Nunes <felipe.bastosn@gmail.com>"]
 license = "Apache-2.0"
@@ -30,6 +30,7 @@ Flask = "2.0.2"
 Flask-Migrate = "3.1.0"
 dynaconf = "3.1.7"
 black = "^21.10b0"
+requests = "^2.26.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
