--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ Jinja2 = "^3.0.3"
 MarkupSafe = "^2.1.0"
 pytest = "6.2.4"
 pylint = "2.8.3"
-Flask = "2.0.2"
+Flask = "^2.1.0"
 Flask-Migrate = "3.1.0"
 dynaconf = "3.1.7"
 black = "^21.12b0"
