--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pylint = "2.8.3"
 Flask = "^2.1.0"
 Flask-Migrate = "3.1.0"
 dynaconf = "3.1.7"
-black = "^21.12b0"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
